--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@helia/dag-json": "^4.0.6",
+    "@helia/http": "^2.1.2",
+    "@helia/interface": "^5.3.2",
+    "@helia/ipns": "^8.2.3",
+    "@helia/unixfs": "^5.0.3",
     "axios": "^1.10.0",
+    "helia": "^5.4.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "react": "^19.0.0",
