feat: add useAurient hook

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -10,6 +10,7 @@ solc = '0.8.26'
 fs_permissions = [
     { access = 'read', path = './out' },
     { access = 'read-write', path = './deploy-out' },
+    { access = 'read-write', path = './deployments' },
 ]
 evm_version = 'cancun'
 remappings = [
