feat: add pwa for mobile and desktop

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@helia/unixfs": "^5.0.3",
     "@web3-storage/w3up-client": "^17.3.0",
     "axios": "^1.10.0",
+    "canvas": "^3.1.2",
     "helia": "^5.4.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "next-pwa": "^5.6.0",
     "pinata": "^2.4.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
